tests/invalid-syntax/58235_invalid_type_in_type_expression/invalid_type_in_type_expression.agu
-- Author: 58235, António Almeida
-- Char is not a valid type

let f(n, c) : Int -> Char -> Int = 
    n
